# $Id$

2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Handlers/SharedMemorySegmentHandler.class.php:
	segments/queues are now created with 0660 permission, instead of 0600.

2007-01-21	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: now able to
	guess class' name from it's object or DAO.

	* core/Form/Primitives/DateRangeList.class.php: printRange() removed
	in favour of DateRange's toString().

	* core/Cache/Cache.class.php: 'forever' is now 7 days (was only 3).

2007-01-19	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Workers/DelayedDaoWorker.class.php: sysvmsg-based
	asynchronous DAO-worker.

2007-01-18	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: identity's map and inner worker
	serialization prevented.

	* core/Form/FormUtils.class.php: object2form() now handles Prototyped
	objects individually.

	* core/Form/FormUtils.class.php: gently handling of LazyOneToOne
	implemented.

2007-01-17	Konstantin V. Arkhipov

	* meta/: no more collections fetching in getContainer-methods.

	* main/Containers/Unified/UnifiedContainer.class.php: now
	automatically fetches unfetched collection in getList().

	* main/Containers/Unified/: support for Criteria implemented; note
	that if Criteria is set, then ObjectQuery will be ignored.

2007-01-13	Konstantin V. Arkhipov

	* trunk/core/Form/Primitives/PrimitiveDate.class.php: checkRanges()
	fixed.

2007-01-12	Konstantin V. Arkhipov

	* core/DB/DBPool.class.php: shutdown() method added, may be used right
	before template's processing.

2007-01-11	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: get() implemented.

	* main/Criteria/Criteria.class.php: optimized fetching of non-required
	non-lazy collections.

	* main/DAOs/BaseDAO.class.php: getListByCriteria() removed.

	* main/Criteria/Criteria.class.php: collection caching fixed.
